# swagger/swagger.yml
@@ -1,264 +1,144 @@
 swagger: "2.0"
 info:
-  title: beego Test API
-  description: beego has a very cool tools to autogenerate documents for your API
-  version: 1.0.0
-  termsOfService: http://beego.me/
+  title: Acceso Historia
+  description: Api para acceso a historia clínica dentro del módulo de Salud del proyecto SIBUD
+  version: "1.0"
+  termsOfService: http://www.udistrital.edu.co/politicas-de-privacidad.pdf
   contact:
-    email: astaxie@gmail.com
+    email: baluist@correo.udistrital.edu.co
   license:
-    name: Apache 2.0
-    url: http://www.apache.org/licenses/LICENSE-2.0.html
+    name: BSD-3-Clause
+    url: http://opensource.org/licenses/BSD-3-Clause
 basePath: /v1
 paths:
-  /object/:
+  /AccesoHistoria/:
     get:
       tags:
-      - object
-      description: get all objects
-      operationId: ObjectController.GetAll
+      - AccesoHistoria
+      description: consulta todos los registros de la tabla AccesoHistoriaClinica
+      operationId: AccesoHistoriaClinicaController.Get All
+      parameters:
+      - in: consulta
+        name: query
+        description: 'Filtro. Por ejemplo, col1: v1, col2: v2 ...'
+        type: string
+      - in: consulta
+        name: fields
+        description: Campos devueltos. Por ejemplo, col1, col2 ...
+        type: string
+      - in: consulta
+        name: sortby
+        description: Campos ordenados por. Por ejemplo, Col1, col2 ...
+        type: string
+      - in: consulta
+        name: order
+        description: El orden correspondiente a cada campo de clasificación, si es un valor único, se aplica a todos los campos de clasificación. Por ejemplo, desc, asc ...
+        type: string
+      - in: consulta
+        name: limit
+        description: Limite el tamaño del conjunto de resultados. Debe ser un número entero
+        type: string
+      - in: consulta
+        name: offset
+        description: Posición inicial del conjunto de resultados. Debe ser un número entero
+        type: string
       responses:
         "200":
           description: ""
           schema:
-            $ref: '#/definitions/models.Object'
+            $ref: '#/definitions/models.AccesoHistoriaClinica'
         "403":
-          description: :objectId is empty
+          description: ""
     post:
       tags:
-      - object
-      description: create object
-      operationId: ObjectController.Create
+      - AccesoHistoria
+      description: agregar un registro en la tabla AccesoHistoriaClinica
+      operationId: AccesoHistoriaClinicaController.Post
       parameters:
       - in: body
         name: body
-        description: The object content
+        description: Cuerpo para el contenido de AccesoHistoriaClinica
         required: true
         schema:
-          $ref: '#/definitions/models.Object'
+          $ref: '#/definitions/models.AccesoHistoriaClinica'
       responses:
-        "200":
-          description: '{string} models.Object.Id'
+        "201":
+          description: '{int} models.AccesoHistoriaClinica'
         "403":
-          description: body is empty
-  /object/{objectId}:
+          description: Cuerpo Vacío
+  /AccesoHistoria/{id}:
     get:
       tags:
-      - object
-      description: find object by objectid
-      operationId: ObjectController.Get
+      - AccesoHistoria
+      description: consultar un registro de la tabla AccesoHistoriaClinica por su id
+      operationId: AccesoHistoriaClinicaController.Get One
       parameters:
       - in: path
-        name: objectId
-        description: the objectid you want to get
+        name: id
+        description: Id a consultar
         required: true
         type: string
       responses:
         "200":
           description: ""
           schema:
-            $ref: '#/definitions/models.Object'
+            $ref: '#/definitions/models.AccesoHistoriaClinica'
         "403":
-          description: :objectId is empty
+          description: :id está vacío
     put:
       tags:
-      - object
-      description: update the object
-      operationId: ObjectController.Update
+      - AccesoHistoria
+      description: actualizar un registro de la tabla AccesoHistoriaClinica
+      operationId: AccesoHistoriaClinicaController.Put
       parameters:
       - in: path
-        name: objectId
-        description: The objectid you want to update
+        name: id
+        description: Id del registro a actualizar
         required: true
         type: string
       - in: body
         name: body
-        description: The body
+        description: Cuerpo para el contenido de AccesoHistoriaClinica
         required: true
         schema:
-          $ref: '#/definitions/models.Object'
+          $ref: '#/definitions/models.AccesoHistoriaClinica'
       responses:
         "200":
           description: ""
           schema:
-            $ref: '#/definitions/models.Object'
+            $ref: '#/definitions/models.AccesoHistoriaClinica'
         "403":
-          description: :objectId is empty
+          description: :id no es entero
     delete:
       tags:
-      - object
-      description: delete the object
-      operationId: ObjectController.Delete
+      - AccesoHistoria
+      description: elimina un registro de la tabla AccesoHistoriaClinica
+      operationId: AccesoHistoriaClinicaController.Delete
       parameters:
       - in: path
-        name: objectId
-        description: The objectId you want to delete
+        name: id
+        description: Id del registro a eliminar
         required: true
         type: string
       responses:
         "200":
-          description: '{string} delete success!'
+          description: '{string} borrado exitoso!'
         "403":
-          description: objectId is empty
-  /user/:
-    get:
-      tags:
-      - user
-      description: get all Users
-      operationId: UserController.GetAll
-      responses:
-        "200":
-          description: ""
-          schema:
-            $ref: '#/definitions/models.User'
-    post:
-      tags:
-      - user
-      description: create users
-      operationId: UserController.CreateUser
-      parameters:
-      - in: body
-        name: body
-        description: body for user content
-        required: true
-        schema:
-          $ref: '#/definitions/models.User'
-      responses:
-        "200":
-          description: '{int} models.User.Id'
-        "403":
-          description: body is empty
-  /user/{uid}:
-    get:
-      tags:
-      - user
-      description: get user by uid
-      operationId: UserController.Get
-      parameters:
-      - in: path
-        name: uid
-        description: The key for staticblock
-        required: true
-        type: string
-      responses:
-        "200":
-          description: ""
-          schema:
-            $ref: '#/definitions/models.User'
-        "403":
-          description: :uid is empty
-    put:
-      tags:
-      - user
-      description: update the user
-      operationId: UserController.Update
-      parameters:
-      - in: path
-        name: uid
-        description: The uid you want to update
-        required: true
-        type: string
-      - in: body
-        name: body
-        description: body for user content
-        required: true
-        schema:
-          $ref: '#/definitions/models.User'
-      responses:
-        "200":
-          description: ""
-          schema:
-            $ref: '#/definitions/models.User'
-        "403":
-          description: :uid is not int
-    delete:
-      tags:
-      - user
-      description: delete the user
-      operationId: UserController.Delete
-      parameters:
-      - in: path
-        name: uid
-        description: The uid you want to delete
-        required: true
-        type: string
-      responses:
-        "200":
-          description: '{string} delete success!'
-        "403":
-          description: uid is empty
-  /user/login:
-    get:
-      tags:
-      - user
-      description: Logs user into the system
-      operationId: UserController.Login
-      parameters:
-      - in: query
-        name: username
-        description: The username for login
-        required: true
-        type: string
-      - in: query
-        name: password
-        description: The password for login
-        required: true
-        type: string
-      responses:
-        "200":
-          description: '{string} login success'
-        "403":
-          description: user not exist
-  /user/logout:
-    get:
-      tags:
-      - user
-      description: Logs out current logged in user session
-      operationId: UserController.logout
-      responses:
-        "200":
-          description: '{string} logout success'
+          description: Id vacío
 definitions:
-  models.Object:
-    title: Object
+  models.AccesoHistoriaClinica:
+    title: AccesoHistoriaClinica
     type: object
     properties:
-      ObjectId:
+      FechaAcceso:
         type: string
-      PlayerName:
-        type: string
-      Score:
+        format: datetime
+      IdAccesoHistoria:
         type: integer
         format: int64
-  models.Profile:
-    title: Profile
-    type: object
-    properties:
-      Address:
-        type: string
-      Age:
+      IdHistoriaClinica:
         type: integer
         format: int64
-      Email:
-        type: string
-      Gender:
-        type: string
-  models.User:
-    title: User
-    type: object
-    properties:
-      Id:
-        type: string
-      Password:
-        type: string
-      Profile:
-        $ref: '#/definitions/models.Profile'
-      Username:
-        type: string
-tags:
-- name: object
-  description: |
-    Operations about object
-- name: user
-  description: |
-    Operations about Users
+      ProfesionaId:
+        type: integer
+        format: int64
